<resources>
    <string name="app_name">TipTime</string>
    <string name="radiobutton_text1">Amazing(20%)</string>
    <string name="radiobutton_text2">Good(18%)</string>
    <string name="radiobutton_text3">Okay(15%)</string>
    <string name="button_text">Calculate</string>
    <string name="label">Cost of Service</string>
    <string name="helper_text">How was the service?</string>
    <string name="label_1">Round up tip?</string>
    <string name="result_text">Tip Amount</string>
</resources>